Fix button styling when multiple pickers present (dropdown button not aligning) and add first attempt at MicrosoftPicker (WIP)

--- a/wagtail_content_import/static/wagtail_content_import/css/import-styles.css
+++ b/wagtail_content_import/static/wagtail_content_import/css/import-styles.css
@@ -1,13 +1,11 @@
 .button.content-import, .content-import.dropdown-toggle {
     background-color: #fafafa;
-    border: 1px solid #007d7e;
+    border-left: 1px solid #007d7e;
     color: #262626;
     }
 
 .button.content-import:hover, .content-import.dropdown-toggle:hover {
     background-color: #ececec;
-    border: 1px solid #007d7e;
-    color: #262626;
     }
 
 .docs-blue.content-import {
@@ -17,3 +15,7 @@
 .import-container.content-import {
     float:right;
 }
+
+.button.content-import {
+    border: 1px solid #fafafa;
+    }
